--- a/DevMountain/noDB/nodb/package.json
+++ b/DevMountain/noDB/nodb/package.json
@@ -2,13 +2,22 @@
   "name": "nodb",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
+  "proxy": "http://localhost:3005",
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-native-sound": "^0.10.9",
+    "react-scripts": "2.0.5",
+    "react-star-rating-component": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,10 +35,8 @@
     "not op_mini all"
   ],
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "server/index.js",
   "devDependencies": {},
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "proxy": "http://localhost:3005"
+  "license": "ISC"
 }
